implement type support for ternary operators

foo = 3 if False else "str" # <- foo:unsure(int,str)
BUG:292170