duchain/expressionvisitor.h
@@ -109,6 +109,7 @@ class KDEVPYTHONDUCHAIN_EXPORT ExpressionVisitor : public AstDefaultVisitor
         virtual void visitTuple(TupleAst* node);
         virtual void visitListComprehension(ListComprehensionAst* node);
         virtual void visitDictionaryComprehension(DictionaryComprehensionAst* node);
+        virtual void visitIfExpression(IfExpressionAst* node);
         
         // whether type of expression should be known or not, i.e. if at the point where the chain breaks the previous type
         // was already unknown, then this is an IDE error, otherwise probably the user's code is wrong; used for error reporting
